responsive design implemented cart or some responsive issue need to fix.

--- a/reactApp/src/_shared/SelectField/SelectField.less
+++ b/reactApp/src/_shared/SelectField/SelectField.less
@@ -30,15 +30,16 @@
    border-radius: 5px;
    border: 1px solid #707070;
    box-sizing: border-box;
+
+   @media only screen and (max-width: 767px) {
+      border-radius: 12px;
+      padding: 0.7rem 1rem;
+      border: 1px solid #707070;
+   }
 }
 
 .floating-select:focus {
    outline: none;
-}
-
-.floating-input:focus ~ .floating-label {
-   top: -8px;
-   font-size: 13px;
 }
 
 select.floating-select {
@@ -51,13 +52,15 @@ select.floating-select::-ms-expand {
 }
 
 .floating-select:not([value='']):valid ~ .floating-label {
-   top: -8px;
-   font-size: 13px;
+   top: -10px;
+   font-size: 15px;
+   padding: 0 0.8rem;
 }
 
 .floating-select[value='']:focus ~ .floating-label {
-   top: 11px;
-   font-size: 13px;
+   top: 13px;
+   font-size: 15px;
+   padding: 0 0.8rem;
 }
 
 .floating-select:not([multiple]):not([size]) {
