--- a/reactApp/src/pages/ActiveCoupons/ActiveCoupons.less
+++ b/reactApp/src/pages/ActiveCoupons/ActiveCoupons.less
@@ -1,10 +1,18 @@
 .active-coupons-page {
    padding: 1rem 0;
+
+   @media only screen and (max-width: 767px) {
+      padding: 0;
+   }
 }
 
 .couponcard-container {
    position: relative;
    margin-top: 3.5rem;
+
+   @media only screen and (max-width: 767px) {
+      margin-top: 3rem;
+   }
 }
 
 .border-card {
@@ -13,4 +21,21 @@
    top: -15px;
    left: 490px;
    border-right: 1px solid #707070;
+
+   @media only screen and (max-width: 767px) {
+      display: none;
+   }
+}
+
+.coupon-card__container {
+   @media only screen and (max-width: 767px) {
+      padding-bottom: 3rem;
+      border-bottom: 1px solid #707070;
+   }
+}
+
+.coupon-card__container--1 {
+   @media only screen and (max-width: 767px) {
+      padding: 3.5rem 0;
+   }
 }
