--- a/reactApp/src/_components/Accordion/AccordionItem/AccordionItem.less
+++ b/reactApp/src/_components/Accordion/AccordionItem/AccordionItem.less
@@ -17,8 +17,15 @@
 
 .lg-font {
    font-size: 1.4rem;
+   @media only screen and (max-width: 767px) {
+      font-size: 1.1rem;
+   }
 }
 
 .sm-font {
    font-size: 1.2rem;
+
+   @media only screen and (max-width: 767px) {
+      font-size: 1rem;
+   }
 }
