--- a/reactApp/src/_shared/TextField/TextField.less
+++ b/reactApp/src/_shared/TextField/TextField.less
@@ -26,9 +26,15 @@
    padding: 1.6rem 1.2rem;
    background: #fff;
    color: #707070;
-   border-radius: 5px;
+   border-radius: 7px;
    border: 1px solid #707070;
    box-sizing: border-box;
+
+   @media only screen and (max-width: 767px) {
+      border-radius: 12px;
+      padding: 1.4rem 1rem;
+      border: 1px solid #707070;
+   }
 }
 
 .did-floating-input:focus,
@@ -36,23 +42,35 @@
    outline: none;
 }
 .did-floating-input:focus ~ .did-floating-label {
-   top: -8px;
-   font-size: 13px;
+   top: -10px;
+   font-size: 15px;
+   padding: 0 0.8rem;
 }
 
 .did-floating-input:not(:placeholder-shown) ~ .did-floating-label {
-   top: -8px;
-   font-size: 13px;
+   top: -10px;
+   font-size: 15px;
+   padding: 0 0.8rem;
 }
 
 .icon-position {
    position: absolute;
    top: 10px;
    right: 25px;
+
+   @media only screen and (max-width: 767px) {
+      top: 5px;
+      right: 20px;
+   }
 }
 
 .password-icon {
    color: #707070;
    width: 30px;
    height: 30px;
+
+   @media only screen and (max-width: 767px) {
+      width: 25px;
+      height: 25px;
+   }
 }
