--- a/reactApp/src/pages/ChangePassword/ChangePassword.less
+++ b/reactApp/src/pages/ChangePassword/ChangePassword.less
@@ -1,10 +1,29 @@
 .changepassword-page {
-   padding: 1rem 0;
+   padding: 1.5rem 0.7rem;
+
+   @media only screen and (max-width: 767px) {
+      padding: 5rem 0;
+   }
+}
+
+.change-password__heading-container {
+   display: flex;
+   align-items: center;
+
+   @media only screen and (max-width: 767px) {
+      display: none;
+   }
 }
 
 .changepassword-container {
-   width: 55%;
-   max-width: 55%;
+   width: 52%;
+   max-width: 52%;
+
+   @media only screen and (max-width: 1024px) {
+      width: 100%;
+      max-width: 100%;
+      padding: 0 1rem;
+   }
 }
 
 .password-btn {
