--- a/reactApp/src/pages/Winners/Winners.less
+++ b/reactApp/src/pages/Winners/Winners.less
@@ -16,6 +16,11 @@
    padding: 0 0.9rem 0 0;
 
    display: flex;
+
+   @media only screen and (max-width: 767px) {
+      width: 80%;
+      border-radius: 22px;
+   }
 }
 
 .winner-input {
