--- a/reactApp/src/pages/profile/profile.less
+++ b/reactApp/src/pages/profile/profile.less
@@ -1,5 +1,9 @@
 .profile-page {
    padding: 1rem 0;
+
+   @media only screen and (max-width: 767px) {
+      padding: 0;
+   }
 }
 
 .doughnut-container {
@@ -11,6 +15,10 @@
 
 .donation-section {
    padding: 1rem 0;
+
+   @media only screen and (max-width: 767px) {
+      padding: 0;
+   }
 }
 
 .helped-raise {
