mobile accordion implemented.

--- a/reactApp/src/pages/FrequentlyAskedQuestions/FrequentlyAskedQuestions.less
+++ b/reactApp/src/pages/FrequentlyAskedQuestions/FrequentlyAskedQuestions.less
@@ -4,3 +4,10 @@
    margin: auto;
    min-height: 80vh;
 }
+
+.mobile-faq-header {
+   font-weight: 900;
+   font-size: 35px;
+   color: #4a4949;
+   margin-bottom: 0.5rem;
+}
