--- a/reactApp/src/_shared/ProfileCardButton/ProfileCardButton.less
+++ b/reactApp/src/_shared/ProfileCardButton/ProfileCardButton.less
@@ -17,6 +17,10 @@
    font-size: 1.2rem;
    text-align: left;
    margin-left: 0.7rem;
+
+   @media (max-width: 768px) {
+      font-size: 1rem;
+   }
 }
 
 .btn-image {
