Navigation Issue, Environment file

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,10 @@
 // global styles
 a { cursor: pointer; }
 
+body{
+    overflow-x: hidden !important;
+}
+
 .app-container {
     min-height: 320px;
 }
