--- a/src/styles.less
+++ b/src/styles.less
@@ -15,3 +15,11 @@ body{
     background-color: #e8e9ea;
     border-bottom: 1px solid #ccc;
 }
+
+.container{
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: 10px !important;
+}
