--- a/reactApp/src/_shared/CouponCard/CouponCard.css
+++ b/reactApp/src/_shared/CouponCard/CouponCard.css
@@ -20,28 +20,32 @@
 }
 @media (max-width: 400px) {
    .EL-number {
-      font-size: 1rem;
+      font-size: 16px;
    }
    .EL-coupon {
-      left: 15.5% !important;
+      left: 10% !important;
+      font-size: 9px;
    }
 }
 .EL-coupon {
    position: absolute;
    right: 0;
    top: 19.5%;
-   left: 15%;
+   left: 12%;
    color: #fff;
    padding: 0.4rem 1rem;
    font-size: 0.625rem;
    font-weight: 100;
 }
+
 @media (max-width: 435px) {
    .EL-coupon {
       top: 19.5%;
       left: 10%;
+      font-size: 9px;
    }
 }
+
 @media (max-width: 410px) {
    .EL-coupon {
       top: 19.5%;
@@ -57,6 +61,10 @@
    padding: 0.4rem 1rem;
    font-size: 0.75rem;
    font-weight: 400;
+
+   @media screen and (max-width: 400px) {
+      font-size: 10px;
+   }
 }
 .Trip-country {
    position: absolute;
@@ -67,6 +75,10 @@
    padding: 0.4rem 1rem;
    font-size: 1.25rem;
    font-weight: 700;
+
+   @media screen and (max-width: 400px) {
+      font-size: 15px;
+   }
 }
 .Qr {
    position: absolute;
@@ -76,6 +88,11 @@
    color: #fff;
    padding: 0.4rem 1rem;
    font-weight: 700;
+
+   @media screen and (max-width: 767px) {
+      height: 60px;
+      width: 80px;
+   }
 }
 @media (max-width: 415px) {
    .Qr {
@@ -93,6 +110,10 @@
    padding: 0.4rem 1rem;
    font-size: 0.75rem;
    font-weight: 500;
+
+   @media screen and (max-width: 767px) {
+      font-size: 10px;
+   }
 }
 .date {
    position: absolute;
@@ -106,7 +127,7 @@
 }
 @media (max-width: 400px) {
    .date {
-      font-size: 0.69rem;
+      font-size: 10px;
    }
 }
 .coupon-name {
@@ -119,6 +140,10 @@
    padding: 0.4rem 1rem;
    font-size: 0.75rem;
    font-weight: 500;
+
+   @media screen and (max-width: 400px) {
+      font-size: 10px;
+   }
 }
 .name {
    position: absolute;
@@ -133,7 +158,7 @@
 }
 @media (max-width: 400px) {
    .name {
-      font-size: 0.69rem;
+      font-size: 10px;
    }
 }
 .dottedLine {
