--- a/src/pages/Signup/Signup.less
+++ b/src/pages/Signup/Signup.less
@@ -96,6 +96,8 @@
             top: 9px;
             right: 12px;
             cursor: pointer;
+            width: 33px;
+            height: 33px;
         }
     }
 
@@ -587,7 +589,8 @@
             .eyeImg {
                 width: 24px;
                 height: 24px;
-                top: 6px;
+                top: 30% !important;
+                right: 4% !important;
             }
 
             .subscription-form:not(:last-child) {
