--- a/src/pages/winners/winners-list/winners-list.less
+++ b/src/pages/winners/winners-list/winners-list.less
@@ -214,7 +214,11 @@
          }
 
          .details {
-            margin-top: 1rem;
+            
+
+            .feature-video{
+               margin: 1rem 0 !important;
+            }
 
             .prof-img {
                width: 60px;
@@ -224,7 +228,7 @@
             .text-box {
                .qoute-icon {
                   width: 9%;
-                  top: 16%;
+                  top: 7%;
                }
 
                .text-wrapper {
