hover cart info left

--- a/reactApp/src/_shared/CountryCodeField/CountryCodeField.less
+++ b/reactApp/src/_shared/CountryCodeField/CountryCodeField.less
@@ -207,6 +207,10 @@ select.country-select::-ms-expand {
    font-size: 15px;
    left: 0;
    padding: 0 0.8rem;
+
+   @media only screen and (max-width: 767px) {
+      font-size: 11px;
+   }
 }
 
 .number-input::-webkit-outer-spin-button,
