--- a/reactApp/src/pages/DreamCartInformation/DreamCartInformation.css
+++ b/reactApp/src/pages/DreamCartInformation/DreamCartInformation.css
@@ -9,3 +9,21 @@
 .textColor {
    color: #104a8e;
 }
+
+.dream-cart__social {
+   padding: 0;
+   margin: 0;
+   list-style: none;
+   display: flex;
+}
+
+.dream-cart__social-container {
+   margin-top: 28px;
+}
+
+.dream-cart__social-container > h6 {
+   font-weight: 300;
+   font-size: 10px;
+   text-align: left;
+   color: #c4c4c4;
+}
