--- a/reactApp/src/_shared/TextField/TextField.less
+++ b/reactApp/src/_shared/TextField/TextField.less
@@ -3,6 +3,10 @@
    margin-bottom: 30px;
    display: flex;
    align-items: center;
+
+   @media only screen and (max-width: 768px) {
+      margin-bottom: 15px;
+   }
 }
 .did-floating-label {
    color: #707070;
