cart hover done

--- a/reactApp/src/_shared/dreamCart/DreamCart.less
+++ b/reactApp/src/_shared/dreamCart/DreamCart.less
@@ -199,6 +199,10 @@
          transition: max-height 0.25s ease-in;
          // display: block;
       }
+
+      .dropErrow {
+         transform: rotate(180deg);
+      }
    }
 }
 
@@ -288,7 +292,8 @@
 
    .order3 {
       order: 1 !important;
-      margin: 10px auto !important;
+      // margin: 10px auto !important;
+      margin: 1rem 0rem !important;
    }
 
    .order3 > input {
@@ -319,7 +324,7 @@
    }
 
    .totalFee {
-      padding-left: 3rem;
+      padding-left: 0rem;
    }
    .buttonApply {
       border-left: 1px solid #104a8e;
