--- a/src/_shared/CouponCard/CouponCard.css
+++ b/src/_shared/CouponCard/CouponCard.css
@@ -1,164 +1,172 @@
 .coupons-card {
-    position: relative;
-    display: inline-block;
+   position: relative;
+   display: inline-block;
 }
-
 .header {
-    position: absolute;
-    top: 5%;
-    left: 3%;
+   position: absolute;
+   top: 5%;
+   left: 3%;
 }
-
 .EL-number {
-    position: absolute;
-    right: 13%;
-    top: 7%;
-    background-color: #fff;
-    padding: 0.1rem 0.5rem;
-    color: #104a8e;
-    font-weight: 700;
-    font-size: 1.1875rem;
-    border-radius: 0.3rem;
+   position: absolute;
+   right: 13%;
+   top: 7%;
+   background-color: #fff;
+   padding: 0.1rem 0.5rem;
+   color: #104a8e;
+   font-weight: 700;
+   font-size: 1.1875rem;
+   border-radius: 0.3rem;
 }
-
 @media (max-width: 400px) {
-    .EL-number {
-        font-size: 1rem;
-    }
-    .EL-coupon {
-        left: 15.5% !important;
-    }
+   .EL-number {
+      font-size: 16px;
+   }
+   .EL-coupon {
+      left: 10% !important;
+      font-size: 9px;
+   }
 }
-
 .EL-coupon {
-    position: absolute;
-    right: 0;
-    top: 19.5%;
-    left: 47%;
-    color: #fff;
-    padding: 0.4rem 1rem;
-    font-size: 0.625rem;
-    font-weight: 100;
+   position: absolute;
+   right: 0;
+   top: 19.5%;
+   left: 12%;
+   color: #fff;
+   padding: 0.4rem 1rem;
+   font-size: 0.625rem;
+   font-weight: 100;
 }
 
 @media (max-width: 435px) {
-    .EL-coupon {
-        top: 19.5%;
-        left: 10%;
-    }
+   .EL-coupon {
+      top: 19.5%;
+      left: 10%;
+      font-size: 9px;
+   }
 }
 
 @media (max-width: 410px) {
-    .EL-coupon {
-        top: 19.5%;
-        left: 6.5%;
-    }
+   .EL-coupon {
+      top: 19.5%;
+      left: 6.5%;
+   }
 }
-
 .price {
-    position: absolute;
-    top: 42%;
-    left: 10%;
-    transform: translateY(-50%);
-    color: #fff;
-    padding: 0.4rem 1rem;
-    font-size: 0.75rem;
-    font-weight: 400;
-}
+   position: absolute;
+   top: 42%;
+   left: 10%;
+   transform: translateY(-50%);
+   color: #fff;
+   padding: 0.4rem 1rem;
+   font-size: 0.75rem;
+   font-weight: 400;
 
+   @media screen and (max-width: 400px) {
+      font-size: 10px;
+   }
+}
 .Trip-country {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 10%;
-    color: #fff;
-    padding: 0.4rem 1rem;
-    font-size: 1.25rem;
-    font-weight: 700;
-}
+   position: absolute;
+   top: 50%;
+   transform: translateY(-50%);
+   left: 10%;
+   color: #fff;
+   padding: 0.4rem 1rem;
+   font-size: 1.25rem;
+   font-weight: 700;
 
+   @media screen and (max-width: 400px) {
+      font-size: 15px;
+   }
+}
 .Qr {
-    position: absolute;
-    left: 68%;
-    top: 47%;
-    transform: translateY(-50%);
-    color: #fff;
-    padding: 0.4rem 1rem;
-    font-weight: 700;
-}
+   position: absolute;
+   left: 68%;
+   top: 47%;
+   transform: translateY(-50%);
+   color: #fff;
+   padding: 0.4rem 1rem;
+   font-weight: 700;
 
+   @media screen and (max-width: 767px) {
+      height: 60px;
+      width: 80px;
+   }
+}
 @media (max-width: 415px) {
-    .Qr {
-        left: 66%;
-        top: 46%;
-    }
+   .Qr {
+      left: 66%;
+      top: 46%;
+   }
 }
-
 .purchase-date {
-    position: absolute;
-    left: 0;
-    top: 73%;
-    left: 6%;
-    transform: translateY(-50%);
-    color: #fff;
-    padding: 0.4rem 1rem;
-    font-size: 0.75rem;
-    font-weight: 500;
-}
+   position: absolute;
+   left: 0;
+   top: 73%;
+   left: 3%;
+   transform: translateY(-50%);
+   color: #fff;
+   padding: 0.4rem 1rem;
+   font-size: 0.75rem;
+   font-weight: 500;
 
+   @media screen and (max-width: 767px) {
+      font-size: 10px;
+   }
+}
 .date {
-    position: absolute;
-    top: 80%;
-    left: 6%;
-    transform: translateY(-50%);
-    color: #fff;
-    padding: 0.4rem 1rem;
-    font-size: 0.75rem;
-    font-weight: 700;
+   position: absolute;
+   top: 80%;
+   left: 3%;
+   transform: translateY(-50%);
+   color: #fff;
+   padding: 0.4rem 1rem;
+   font-size: 0.75rem;
+   font-weight: 700;
 }
-
 @media (max-width: 400px) {
-    .date {
-        font-size: 0.69rem;
-    }
+   .date {
+      font-size: 10px;
+   }
 }
-
 .coupon-name {
-    position: absolute;
-    right: 0;
-    top: 73%;
-    left: 60%;
-    transform: translateY(-50%);
-    color: #fff;
-    padding: 0.4rem 1rem;
-    font-size: 0.75rem;
-    font-weight: 500;
-}
+   position: absolute;
+   right: 0;
+   top: 73%;
+   left: 42.5%;
+   transform: translateY(-50%);
+   color: #fff;
+   padding: 0.4rem 1rem;
+   font-size: 0.75rem;
+   font-weight: 500;
 
+   @media screen and (max-width: 400px) {
+      font-size: 10px;
+   }
+}
 .name {
-    position: absolute;
-    top: 80%;
-    right: 0;
-    left: 60%;
-    transform: translateY(-50%);
-    color: #fff;
-    padding: 0.4rem 1rem;
-    font-size: 0.75rem;
-    font-weight: 700;
+   position: absolute;
+   top: 80%;
+   right: 0;
+   left: 62%;
+   transform: translateY(-50%);
+   color: #fff;
+   padding: 0.4rem 1rem;
+   font-size: 0.75rem;
+   font-weight: 700;
 }
-
 @media (max-width: 400px) {
-    .name {
-        font-size: 0.69rem;
-    }
+   .name {
+      font-size: 10px;
+   }
 }
-
 .dottedLine {
-    position: absolute;
-    height: 1px;
-    top: 65%;
-    max-width: 80%;
-    left: 10%;
-    width: 100%;
-    border-bottom: 1px dashed #fff;
+   position: absolute;
+   height: 1px;
+   top: 65%;
+   max-width: 80%;
+   left: 10%;
+   width: 100%;
+   border-bottom: 1px dashed #fff;
 }
